--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,7 @@
 
    <target name="checkstyle" description="Run checkstyle">
      <checkstyle config="checkstyle.xml">
-       <fileset dir="com/horstmann/violet" includes="**/*.java"/>
+       <fileset dir="com/cs151/asciiviolet" includes="**/*.java"/>
      </checkstyle>
    </target>
    
