--- a/.project
+++ b/.project
@@ -10,15 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>net.sf.eclipsecs.core.CheckstyleBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>net.sf.eclipsecs.core.CheckstyleNature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>violet</name>
-			<type>2</type>
-			<locationURI>PROJECT_LOC/com/horstmann/violet</locationURI>
-		</link>
-	</linkedResources>
 </projectDescription>
